--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="apps.css">
+  <link rel="stylesheet" href="public/apps.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Merriweather&family=Montserrat&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Merriweather&family=Montserrat&family=Open+Sans&family=Oswald&family=Sacramento&display=swap" rel="stylesheet">
-  <link rel="icon" href="favicon (3).ico">
-  <link rel="stylesheet" href="/css/tailwind.css">
+  <link rel="icon" href="public/favicon (3).ico">
+  <link rel="stylesheet" href="css/tailwind.css">
   <title>Portfolio website of Raihan Khan</title>
 </head>
 <body>
@@ -26,9 +26,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav btn-group">
             
-            <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="index.html">Home</a></button>
-            <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></button>
-            <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a></button>
+            <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="pulic/index.html">Home</a></button>
+            <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="public/contact.html">Contact</a></button>
+            <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="public/gallery.html">Gallery</a></button>
 
 
 
@@ -39,7 +39,7 @@
   </nav>
   <div class="first-page">
       <p class="inro">I'm Md Raihan khan. I'm a "Digital Marketer".</p>
-      <div id="profile-image">  <img src="profile-modified.png" id="profile-1" alt="Image of Raihan Khan"> </div>
+      <div id="profile-image">  <img src="public/profile-modified.png" id="profile-1" alt="Image of Raihan Khan"> </div>
       <hr id="hrr">
       <h4>My Social Media Link Bellow</h4>
       <div id="social media">  
@@ -56,7 +56,7 @@
 
 
 
-
+  <script src="appjs/scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
