--- a/public/gallery.html
+++ b/public/gallery.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav btn-group">
                     
-                    <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="index.html">Home</a></button>
+                    <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="/index.html">Home</a></button>
                     <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></button>
                     <button type="button" class="btn btn-outline-info"><a class="nav-link active" aria-current="page" href="index.html">Gallery</a></button>
        
