--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <hr id="hrr">
       <h4>My Social Media Link Bellow</h4>
       <div id="social media">  
-        <a href="https://www.facebook.com/exceptional.prince.3954"><picture><img id="fb" class="icon" src="/icon/facebook-icon.png" alt=""><label for="fb">Facebook</label></picture></a>
-        <a href="https://www.instagram.com/raihan__khan___01/"><picture><img id="ins" class="icon" src="/icon/instagram-icon.png" alt=""><label for="ins">Instagram</label></picture></a>
-        <a href="www.linkedin.com"><picture><img id="li" class="icon" src="/icon/linkedin-icon.png" alt=""><label for="li">LinkedIn</label></picture></a>
+        <a href="https://www.facebook.com/exceptional.prince.3954"><picture><img id="fb" class="icon" src="icon/facebook-icon.png" alt=""><label for="fb">Facebook</label></picture></a>
+        <a href="https://www.instagram.com/raihan__khan___01/"><picture><img id="ins" class="icon" src="icon/instagram-icon.png" alt=""><label for="ins">Instagram</label></picture></a>
+        <a href="www.linkedin.com"><picture><img id="li" class="icon" src="icon/linkedin-icon.png" alt=""><label for="li">LinkedIn</label></picture></a>
       </div>
   </div>
   
